--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/translate": "^7.2.1",
+    "@iamtraction/google-translate": "^2.0.1",
     "@line/bot-sdk": "^7.5.2",
+    "@vitalets/google-translate-api": "^9.2.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "google-spreadsheet": "^3.3.0",
+    "google-translate-api": "^0.1.1",
     "node-cron": "^3.0.2",
     "request": "^2.88.2",
     "sharp": "^0.31.3",
